[metadata]
name = userinfochecker
version = attr: user_info_checker.__version__
author = A.A. Suvorov
author_email = saneksking@gmail.com
description = 'User Info Checker - A library for get user information.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saneksking
project_urls =
    Documentation = https://github.com/saneksking/userinfochecker/blob/master/README.md
    Release notes = https://github.com/saneksking/userinfochecker/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    saneksking
    userinfochecker
    checkuserinfo

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    requests==2.32.2
    outputdecorator==0.0.1